Fix Animation Cache Clear for Transform Masks

This was triggered during spontaneous job updates where transforms masks
would inappropriately flush all frames in because the frames were marked
dirty.

requestProjectUpdateNoFilthy now has a method that allows the refreshing
of projection without triggering an animation update.

BUG: 377289